feat: get event Info with eventId via POST event/info
